--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/express-rate-limit": "^6.0.0",
     "dotenv": "^16.3.1",
+    "express-rate-limit": "^7.1.5",
     "firebase": "^10.7.0",
     "firebase-admin": "^11.11.1",
     "nodemailer": "^6.9.7",
